--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,14 @@
+@article{planas02,
+  title={Controlling Revisions in Arima-Model-Based Seasonal Adjustment},
+  author={Planas, Christophe and Depoutot, Raoul},
+  journal={Journal of Time Series Analysis},
+  volume={23},
+  number={2},
+  pages={193--213},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
 @article{maravall86,
  ISSN = {01621459},
  URL = {http://www.jstor.org/stable/2289005},
