--- a/25-seats.qmd
+++ b/25-seats.qmd
@@ -4,14 +4,14 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("drafting", "2023-01-21", section = "SEATS")  # drafting, polishing, complete
+status("polishing", "2023-01-21", section = "SEATS")  # drafting, polishing, complete
 ```
 
 ## Model based decomposition
 
 Signal Extraction in ARIMA Time Series, or SEATS, is a method for estimating unobserved components in a time series.
 It is developed from the work of @cleveland76, @hillmer82, @maravall86.
-If applied properly, SEATS seasonal factors are usually more stable than X-11, and the seasonally adjusted series show less revisions than X11 (??) (see final section for a more extensive discussion).
+If applied properly, SEATS seasonal factors are usually more stable than X-11, and the seasonally adjusted series show less revisions than X11 (see @sec-comparing for a more extensive discussion).
 
 Like X-11, SEATS applies a series of filters to an observed time series, as described in @sec-seasonal-decomposition.
 Like X-11, SEATS uses a forecast extended series, in order to obtain unbiased results at the margin.
@@ -19,13 +19,15 @@ Like X-11, SEATS uses a forecast extended series, in order to obtain unbiased re
 Unlike X-11, however, SEATS filters are derived from the ARIMA model of the time series.
 While X-11 filters are predefined and fixed, the SEATS filters are different for each ARIMA model.
 
-::: callout-important
-#### X-11 Filter
+::: callout-note
+## Comparing X-11 and SEATS filters
+
+#### X-11 filters {.unnumbered}
 
 -   finite set of empirically developed moving average filters
 -   fixed filtering seen as easier to use (less statistical machinery)
 
-#### SEATS filters
+#### SEATS filters {.unnumbered}
 
 -   specifies stochastic models for unobserved components
 -   derives seasonal adjustment filters from these models
@@ -34,18 +36,17 @@ While X-11 filters are predefined and fixed, the SEATS filters are different for
 :::
 
 Given a certain ARIMA model (such as the "Airline" (0 1 1)(0 1 1) model which is appropriate for the description of the `AirPassengers` time series), SEATS decomposes the model into separate models for the trend, the seasonal and the irregular component.
-This is done by the *canonical decomposition* derived by Pierce, Box-Hillmer, Tiao and Burman \[FIXME\] and will be discussed in section (FIXME).
+This is done by the *Canonical Decomposition* and will be discussed in @sec-canonical-decomposition.
 
-The decomposition of the ARIMA model is independent of the data.
+The decomposition of the ARIMA model is almost independent of the data.
 For each ARIMA specification, there is a unique canonical decomposition.
-Some decompositions for common ARIMA models are given in table \[FIXME, e.g. (011)(011) -\> ???
-???\].
+For a normal "Airline" (0 1 1)(0 1 1) model (with both moving average coefficients not being to close to 1), the trend component can be described with a (0 2 2)(0 0 0) model, while the seasonal component can be described approximately by a (0 0 11)(0 0 0) model.
+The parameters of these models can be derived from the parameter estimations of the initial airline model that describes the original series.
+The irregular component is usually white noise, described by the trivial (0 0 0)(0 0 0) model.
 
-The decomposed ARIMA models imply a certain filter, which is derived by the WK procedure.
-The filters depend on the parameters of the original arima models.
-Figure FIXME displays the SEATS filters for an (0 1 1)(0 1 1) model, for various values of theta.
+The decomposed ARIMA models imply a certain filter, which is derived by the Wiener-Kolmogorov procedure (@sec-wiener-kolmogorov-algorithm).
 
-## Comparing SEATS with X-11 filters:
+## Comparing SEATS with X-11 filters
 
 If SEATS and X-11 use similar filters, the final adjustment will be similar.
 Using the default arguments of `seas()` on `AirPassengers`, the adjustment is very similar:
@@ -53,15 +54,12 @@ Using the default arguments of `seas()` on `AirPassengers`, the adjustment is ve
 ```{r}
 seats <- seas(AirPassengers)
 x11 <- seas(AirPassengers, x11 = list())
-
 tsbox::ts_plot(final(seats), final(x11))
-
 ```
 
-If we look at the applied filters, we see that FIXME.
-
 Others have looked at comparing SEATS and X-11 filters.
-In Planas and Depoutot (2002) they show with X11 seasonal filter that is closest to an implied Airline SEATS model based on the $\Theta_{12}$
+In @planas02 they show with X11 seasonal filter that is closest to an implied (0 1 1)(0 1 1) "Airline" SEATS model based on the $\Theta_{12}$.
+As a reminder, $\Theta_{12}$ refers to the moving average parameter of the seasonal difference in the ARIMA model.
 
 | Filter | Closest Seasonal MA | Seasonal MA Interval |
 |--------|---------------------|----------------------|
@@ -70,21 +68,20 @@ In Planas and Depoutot (2002) they show with X11 seasonal filter that is closest
 | 3x9    | 0.723 - 0.732       | 0.75 - 0.87          |
 | 3x15   | 0.824 - 0.828       | 0.88 - 1.00          |
 
-Let's consider small vs large values of seasonal $\Theta$:
-
+Let's consider small vs large values of seasonal $\Theta_{12}$.
 Values of $\Theta$ close to zero yield a seasonal adjustment filter that has seasonal factors that change rapidly over time.
 This provides considerable smoothing and large revisions.
 These revisions will only last for a small number of years due to the shorter filters.
 
-Values of $\Theta$ close to one yield a seasonal adjustmnet filter that has seasonal factors that change slowly over time.
+Values of $\Theta$ close to one yield a seasonal adjustment filter that has seasonal factors that change slowly over time.
 This provides less smoothing but relatively small revisions.
 Any revisions that do occur will last for a longer period of time due to the longer filters.
 
-## Transitory component \[Later, more optional\]
+## Transitory component
 
 Sometimes SEATS includes a transitory component in its decomposition:
 
-$$ X_t = T_t + S_t + R_t + u_t $$
+$$ X_t = T_t + S_t + R_t + I_t $$
 
 The transitory component captures short, erratic behavior that is not white noise, sometimes associated with awkward frequencies.
 
@@ -94,7 +91,7 @@ The transitory component captures short, erratic behavior that is not white nois
 
 ## Quick refresher on ARIMA models and notation
 
-The remaining of the SEATS section will heavily rely on the autoregressive and moving-average operators $\phi(B)$ and $\theta(B)$ where $B X_t = X_{t-1}$.
+The remaining of the SEATS section will heavily rely on the auto-regressive and moving-average operators $\phi(B)$ and $\theta(B)$ where $B X_t = X_{t-1}$.
 
 If $X_t$ follows and ARIMA($p$, $d$, $q$) model: $$
 \phi(B) X_t = \theta(B) a_t 
@@ -121,10 +118,10 @@ $$
 
 ## SEATS Assumptions
 
--   The linearized series can be represented by an ARIMA model which captures the stochastic structure of the series (Linearized series = series with regression effects removed)
+-   The linearized series can be represented by an ARIMA model which captures the stochastic structure of the series. As a reminder, the linearized series is the series with regression effects removed.
 -   After differencing each with the ARIMA's differencing polynomial, the components are orthogonal (uncorrelated)
 
-SEATs decomposes the autoregressive polynomial by its roots associating them with different latent components.
+SEATS decomposes the auto-regressive polynomial by its roots associating them with different latent components.
 For example, roots near seasonal frequencies are associated with the seasonal component and roots near zero are associated with the trend component.
 $$
 \phi(B) = \phi_T(B) \cdot \phi_S(B) \cdot \phi_R(B).
@@ -138,9 +135,14 @@ X_t =
 \frac{\theta_R(B)}{\phi_R(B)} a_{R,t}  + u_t
 $$
 
-If the spectra of all components in non-negative the decomposition is admissible, SEATS finds admissible models for components $$ \phi_T(B) T_t = \theta_T(B) a_{T, t} $$ $$ \phi_S(B) S_t = \theta_S(B) a_{S, t} $$ $$\phi_R(B) R_t = \theta_R(B) a_{R, t} $$ *Problem:* Infinite number of models that yield the same aggregate.
+If the spectra of all components in non-negative the decomposition is admissible, SEATS finds admissible models for components $$ \phi_T(B) T_t = \theta_T(B) a_{T, t} $$ $$ \phi_S(B) S_t = \theta_S(B) a_{S, t} $$ $$\phi_R(B) R_t = \theta_R(B) a_{R, t} $$
+
+## Canonical Decomposition {#sec-canonical-decomposition}
+
+However, there infinite number of models that yield the same aggregate.
 The choices differ in how white noise is allocated among the components.
-*Solution:* Canonical Decomposition: SEATS uses the method of Pierce, Box-Hillmer, Tiao and Burman:
+This is where the *Canonical Decomposition* comes into play.
+SEATS uses the method of Pierce, Box-Hillmer, Tiao and Burman:
 
 -   Put all the white noise into the irregular components
 -   Maximize the variance of the irregular
@@ -150,8 +152,11 @@ This is called the *Canonical Decomposition*.
 We already stated that both X-11 and SEATS estimate the unobserved components by passing a moving-average filter over the observed data.
 So how do we use these implied component models to get a linear filter?
 It should be clear that the filter weights will depend on that arima model is picked $X_t = \Psi(B) a_t$, and what the implied seasonal model, $\phi_S(B) S_t = \theta_S(B) a_{S,t} \Rightarrow S_t = \Psi(B) a_t$, is.
+
+## Wiener-Kolmogorov Algorithm {#sec-wiener-kolmogorov-algorithm}
+
 The **Wiener-Kolmogorov** (WK) algorithm outlines the methodology to get the so-called WK filter.
-This is the filter that is equal to the conditional expectation of the seasonal component conditional on the observed series.\
+This is the filter that is equal to the conditional expectation of the seasonal component conditional on the observed series.
 
 $$\widehat{S}_t = \underbrace{\left[ \frac{\Sigma_S}{\Sigma} \frac{\Psi_S(B)\Psi_S(F)}{\Psi(B)\Psi(F)} \right]}_{\mbox{WK filter weights}} X_t$$ where $F=B^{-1}$ if the forward shift operator such that $F X_t = X_{t+1}$.
 
@@ -159,23 +164,22 @@ More than other coefficients, the seasonal MA ($\theta_{12}$) influences whether
 
 ## Example SEATS adjustment
 
-## Considerations when using SEATS in X-13A-S
+## Considerations when using SEATS in X-13
 
 Some model limitations when using SEATS are as follows.
 
 -   SEATS does not accept missing lag models. Hence, it is acceptable to specify a (0 1 3)(0 1 1) model but unacceptable to specify (0 1 \[1 3\])(0 1 1).
 -   The AR and MA orders (p and q) cannot be greater than 3.
--   *Inadmissible decomposition*: Sometimes, the estimated values of coefficients make it impossible to estimate components from the estimated ARIMA models.
-    -   SEATS will usually change the model and re-estimate it in order to get an admissible decomposition.
-    -   When it is difficult to find an admissible decomposition the airline model is often used as a replacement. This usually gives acceptable results for a broad range of series.
+-   *Inadmissible decomposition*: Sometimes, the estimated values of coefficients make it impossible to estimate components from the estimated ARIMA models. SEATS will usually change the model and re-estimate it in order to get an admissible decomposition. When it is difficult to find an admissible decomposition the airline model is often used as a replacement. This usually gives acceptable results for a broad range of series.
 -   Model span can have large implications in a SEATS adjustment. This is due to the changing dynamics of long time series and how SEATS derives its filters.
 
-## Some existing studies and conclusions
+## Comparing X-11 and SEATS {#sec-comparing}
 
 The Bureau of Labor Statistics formed a group to do a comparison study between X-11 and model-based seasonal adjustments (CITE BLS 2007).
 The examined a cross section of 87 BLS series with X-11, SEATS, and STAMP using spectral, revisions history, model adequacy and sliding spans diagnostics.
 They found that SEATS seasonal factors are usually more stable than X-11 and X-11 trend component is usually more stable than SEATS.
 Also, among series that were seasonal, residual seasonality almost never appears using either method.
+
 The only exception being a small number of SEATS runs where model inadequacy for the full span of data was present.
 This manifested as SEATS having difficulty identifying a usable model for decomposition and falling back on the airline model.
 They found even in these situations the SEATS seasonal adjustment is usually reasonable.
